--- a/extra.html
+++ b/extra.html
@@ -5,5 +5,6 @@
   </head
   <body>
     Here is some random text.
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/vU8dCYocuyI" frameborder="0" allowfullscreen></iframe>
   </body>
 </html>
