--- a/extra.html
+++ b/extra.html
@@ -5,7 +5,7 @@
   </head
   <body>
     Here is some random text.
-    <img src="http://cdn.hitfix.com/photos/5496125/john-oliver-hbo_article_story_large.jpg">
+    <img src="http://dn.hitfix.com/photos/5496125/john-oliver-hbo_article_story_large.jpg">
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/vU8dCYocuyI" frameborder="0" allowfullscreen></iframe>
   </body>
